--- a/test/Axe.Logging.Test/Axe.Logging.Test.csproj
+++ b/test/Axe.Logging.Test/Axe.Logging.Test.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AxeLoggingFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
