--- a/src/Axe.Logging.Core/Axe.Logging.Core.csproj
+++ b/src/Axe.Logging.Core/Axe.Logging.Core.csproj
@@ -34,7 +34,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Logging.cs" />
+    <Compile Include="AxeLogEntryExtension.cs" />
+    <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
