--- a/test/Axe.Logging.Test/Axe.Logging.Test.csproj
+++ b/test/Axe.Logging.Test/Axe.Logging.Test.csproj
@@ -60,7 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AxeLoggingFacts.cs" />
+    <Compile Include="AxeLogEntryExtensionFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
