--- a/test/Axe.Logging.Test/Axe.Logging.Test.csproj
+++ b/test/Axe.Logging.Test/Axe.Logging.Test.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AxeLogEntryExtensionFacts.cs" />
+    <Compile Include="AxeLoggerFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
