[yanpei] add AxeLogManager to getLogger and getCurrentClassLogger, and add NLogLogger for NLog.

--- a/test/Axe.Logging.Test/Axe.Logging.Test.csproj
+++ b/test/Axe.Logging.Test/Axe.Logging.Test.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="AxeLogEntryExtensionFacts.cs" />
     <Compile Include="AxeLoggerFacts.cs" />
+    <Compile Include="AxeLogManagerFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
