--- a/src/Axe.Logging.Core/Axe.Logging.Core.csproj
+++ b/src/Axe.Logging.Core/Axe.Logging.Core.csproj
@@ -46,12 +46,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AxeLogEntryExtension.cs" />
+    <Compile Include="AxeLogManger.cs" />
+    <Compile Include="AxeLogSetting.cs" />
+    <Compile Include="DummyLogger.cs" />
     <Compile Include="IAxeLogger.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LogEntry.cs" />
     <Compile Include="LogEntryMark.cs" />
     <Compile Include="LoggerBase.cs" />
     <Compile Include="AxeLogLevel.cs" />
+    <Compile Include="NLogLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
