--- a/src/Axe.Logging.NLog/Axe.Logging.NLog.csproj
+++ b/src/Axe.Logging.NLog/Axe.Logging.NLog.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D71AC3D6-13F8-4826-838A-64DEAAE75997}</ProjectGuid>
+    <ProjectGuid>{08DF3D43-C4D7-4C0E-A93D-6710C332C576}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Axe.Logging.Core</RootNamespace>
-    <AssemblyName>Axe.Logging.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Axe.Logging.NLog</RootNamespace>
+    <AssemblyName>Axe.Logging.NLog</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,30 +30,33 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NLog.4.4.9\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AxeLogEntryExtension.cs" />
-    <Compile Include="AxeLogManger.cs" />
-    <Compile Include="AxeLogSetting.cs" />
-    <Compile Include="DummyLogger.cs" />
-    <Compile Include="DummyLoggingBackend.cs" />
-    <Compile Include="IAxeLogger.cs" />
-    <Compile Include="ILoggingBackend.cs" />
-    <Compile Include="Level.cs" />
-    <Compile Include="LogEntry.cs" />
-    <Compile Include="LogEntryMark.cs" />
-    <Compile Include="LoggerBase.cs" />
-    <Compile Include="AxeLogLevel.cs" />
+    <Compile Include="NLogLogger.cs" />
+    <Compile Include="NLogLoggingBackend.cs" />
+    <Compile Include="NLogLoggingBackendExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Axe.Logging.Core\Axe.Logging.Core.csproj">
+      <Project>{d71ac3d6-13f8-4826-838a-64deaae75997}</Project>
+      <Name>Axe.Logging.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
