--- a/test/Axe.Logging.Test/Axe.Logging.Test.csproj
+++ b/test/Axe.Logging.Test/Axe.Logging.Test.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.4.5.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -63,6 +66,7 @@
     <Compile Include="AxeLogEntryExtensionFacts.cs" />
     <Compile Include="AxeLoggerFacts.cs" />
     <Compile Include="AxeLogManagerFacts.cs" />
+    <Compile Include="FakeAxeLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
